# linkedin_jobs

./: cookies-NusretAkay033@gmail.com.json  cookies-OrhanSezer177@gmail.com.json  cookies-asavcasfas@hotmail.com.json  cookies-aysecansucinar592@gmail.com.json  cookies-caneraskar491@gmail.com.json  cookies-fevzidege286@gmail.com.json  cookies-halimaybakan503@gmail.com.json  cookies-kezibanyediel468@gmail.com.json  cookies-necatikantar75@gmail.com.json  cookies-reysisaydan371@gmail.com.json  cookies-rukiyekaygusuz813@gmail.com.json  cookies-samedakbulut24@gmail.com.json  cookies-samedakbulut58@gmail.com.json  cookies-sefacanbay79@gmail.com.json  cookies-tekinakdemir14@gmail.com.json  cookies-tekinakdemir21@gmail.com.json  pyproject.toml
src/: export_excel_all_data.py  export_excel_linkedin_jobs.py  export_excel_tech_jobs.py  linkedin_scraper.py  utils.py  website_scraper.py
src/assets/: founders.csv  founders_linkedin_jobs.csv
src/helpers/: accounts.py  captcha.py  cookies.py  logger.py  tech_jobs.py  tech_jobs_ai.py  two_factor.py
src/helpers/sqlite/: sqlite.py
src/linkedin/: login.py
techjobs/: main.py
techjobs/assets/: founders.csv  founders_linkedin_jobs.csv
techjobs/helpers/: linkedin.py  utils.py
