[tool.poetry]
name = "linkedin_jobs"
version = "0.1.0"
description = ""
authors = ["rafaeldecarvalho <rafaeldecarvalho.ps@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
selenium-driverless = "^1.9.3.1"
requests = "^2.32.3"
linkedin-api = "^2.3.0"
beautifulsoup4 = "^4.12.3"
tenacity = "^9.0.0"
tqdm = "^4.66.5"
rich = "^13.9.2"
2captcha-python = "^1.5.0"
colorlog = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
