[tool.poetry]
name = "linkedin_jobs"
version = "0.1.0"
description = ""
authors = ["rafaeldecarvalho <rafaeldecarvalho.ps@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
selenium-driverless = "^1.9.3.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
tenacity = "8.5.0"
tqdm = "^4.66.5"
rich = "^13.9.2"
2captcha-python = "^1.5.0"
colorlog = "^6.8.2"
langchain-community = "^0.3.2"
langchain = "^0.3.3"
langchain-ollama = "^0.2.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
